--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -48,6 +48,8 @@ body
     &:hover
         transform: skewY(2deg) skewX(15deg) scale(1.1)
         text-shadow: 0rem .4rem .4rem rgba($color-black, .25)
+    &_white
+        color: $color-white
 
 .tittle-third
     font-size: $font-size-paragraph-h3
