--- a/sass/components/_tour-card.sass
+++ b/sass/components/_tour-card.sass
@@ -13,6 +13,8 @@
         width: 100%
         backface-visibility: hidden
         box-shadow: $box-shadow
+        border-radius: .5rem
+        overflow: hidden
         &_front
             
         &_back
@@ -27,8 +29,14 @@
     &__img
         background-blend-mode: hard-light
         height: 21rem
-        background: $color-brown-light url(../img/card-1.jpg) center / cover no-repeat
+        margin-bottom: 6.5rem        
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%)
+        &_1
+            background: $color-brown-light url(../img/card-1.jpg) center / cover no-repeat
+        &_2
+            background: $color-brown-light url(../img/card-2.jpg) center / cover no-repeat
+        &_3
+            background: $color-brown-light url(../img/card-3.jpg) center / cover no-repeat
     &__title
         font-size: 2.8rem
         letter-spacing: .2rem
@@ -53,12 +61,30 @@
             list-style: none
             margin: 0 auto
             width: 70%
+            text-align: center
             li
                 font-size: $font-size-paragraph
                 letter-spacing: .2rem
                 color: $color-gray
                 border-bottom: 1px solid $color-gray
-                
-                text-align: center
+                display: inline-block
                 &:not(:last-child)
                     margin-bottom: 2rem
+
+    &__backSide-box
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
+    &__text
+        margin-bottom: 8rem
+         letter-spacing: .2rem
+        text-transform: uppercase
+        text-align: center
+        color: $color-white
+        &_1
+            font-size: $font-size-paragraph
+            font-weight: 300
+        &_2
+            font-size: 6rem
+            font-weight: 500
