--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -1,6 +1,6 @@
 .section-about
     padding-top: 6rem
-    padding-bottom: 15rem
+    margin-bottom: 20rem
 
 .section-adventure
     padding: 20rem 0
@@ -12,3 +12,8 @@
 
 .section-tour
     padding-top: 21rem
+    margin-bottom: 10rem
+
+.section-feedBack
+    padding: 8rem 0rem
+    position: relative
