--- a/sass/components/_button.sass
+++ b/sass/components/_button.sass
@@ -1,5 +1,5 @@
 .btn
-    &:link, &:visited
+    &, &:link, &:visited
         @include style-link
         padding: 1.5rem 4rem
         background: $color-white
@@ -7,6 +7,7 @@
         transition: all .3s
         position: relative
         font-size: 2rem
+        border: none
     &:hover
         transform: translateY(-4px)
         box-shadow: $box-shadow
@@ -31,4 +32,12 @@
     &_animated
         animation: BtnToUp .5s ease-out .7s
         animation-fill-mode: backwards
-        
+
+.btn_brown
+    &, &:link, &:visited
+        background: $color-brown-dark
+        color: $color-white
+    &:hover
+    &::after
+        background: $color-brown-dark
+    
