--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -4,7 +4,7 @@
 
 .section-adventure
     padding: 20rem 0
-    background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(1, 1, 1, 0.7) 99.94%), 
+    background: linear-gradient(90deg, rgba($color-brown-light, 0.7), rgba($color-black, 0.7)), 
     url(../img/section-adventure.jpg) center / cover no-repeat
     transform: skewY(7deg)
     & > *
@@ -17,3 +17,7 @@
 .section-feedBack
     padding: 8rem 0rem
     position: relative
+
+.section-book
+    padding: 10rem
+    background: linear-gradient(90deg, rgba($color-brown-light, 0.7), rgba($color-brown-dark, 0.7)),
