--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,9 +13,11 @@
 @import "components/tour-card.sass"
 @import "components/feedBack-card.sass"
 @import "components/bg-video.sass"
+@import "components/form.sass"
 
 @import "layout/header.sass"
 @import "layout/grid.sass"
+@import "layout/footer.sass"
 
 @import "pages/home.sass"
 
