--- a/sass/base/_typography.sass
+++ b/sass/base/_typography.sass
@@ -21,6 +21,13 @@ body
         animation-duration: 1.7s
         animation-delay: 1s
         animation-timing-function: ease
+        backface-visibility: hidden
+        @include respond(tab-land)
+            font-size: 4rem
+        @include respond(tab-port)
+            font-size: 3.6rem
+            letter-spacing: .5rem
+            margin-bottom: 0
     &__secondary
         display: block
         font-weight: 400
@@ -33,6 +40,12 @@ body
         animation-timing-function: ease
         backface-visibility: hidden
         margin-bottom: 6.5rem
+        @include respond(tab-land)
+            font-size: 3.5rem
+            margin-bottom: 3.5rem
+        @include respond(tab-port)
+            font-size: 3.2rem
+            letter-spacing: .5rem
 
 .title-secondary
     text-align: center 
@@ -45,6 +58,10 @@ body
     color: transparent
     transition: all 0.4s
     backface-visibility: hidden
+    @include respond(tab-land)
+        font-size: 3rem
+    @include respond(tab-port)
+        letter-spacing: .6rem
     &:hover
         transform: skewY(2deg) skewX(15deg) scale(1.1)
         text-shadow: 0rem .4rem .4rem rgba($color-black, .25)
@@ -56,9 +73,13 @@ body
     letter-spacing: .2rem
     text-transform: uppercase
     font-weight: 700
+    @include respond(tab-land)
+            font-size: 1.8rem
 
 .paragraph
     font-size: $font-size-paragraph
     letter-spacing: .2rem
     line-height: 140%
     font-weight: 400
+    @include respond(tab-land)
+        font-size: 1.5rem
