--- a/sass/components/_button.sass
+++ b/sass/components/_button.sass
@@ -8,6 +8,8 @@
         position: relative
         font-size: 2rem
         border: none
+        @include respond(tab-port)
+            padding: 2rem 5rem
     &:hover
         transform: translateY(-4px)
         box-shadow: $box-shadow
