--- a/sass/layout/_footer.sass
+++ b/sass/layout/_footer.sass
@@ -10,6 +10,11 @@
         display: inline-block
         &:not(:last-child)
             margin-right: 5rem
+        @include respond(tab-land)
+            &:not(:last-child)
+                margin-right: 1.6rem
+        @include respond(tab-port)
+            margin: 1rem 3rem
     &__link
         &:link, &:visited
             color: $color-gray
