--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -1,6 +1,10 @@
 .section-about
     padding-top: 6rem
     margin-bottom: 20rem
+    @include respond(tab-land)
+        margin-bottom: 13rem
+    @include respond(tab-port)
+        margin-bottom: 40rem
 
 .section-adventure
     padding: 20rem 0
@@ -9,6 +13,8 @@
     transform: skewY(7deg)
     & > *
         transform: skewY(-7deg)
+    @include respond(tab-land)
+        padding: 15rem 0
 
 .section-tour
     padding-top: 21rem
