finish adaptive design

--- a/sass/components/_feedBack-card.sass
+++ b/sass/components/_feedBack-card.sass
@@ -8,6 +8,7 @@
     @include respond(tab-port)
         transform: skewX(350deg)
         padding: 3rem
+        width: 95%
     & > *
         transform: skewX(-330deg)
         @include respond(tab-port)
