--- a/sass/pages/_home.sass
+++ b/sass/pages/_home.sass
@@ -26,4 +26,6 @@
 
 .section-book
     padding: 10rem
-    background: linear-gradient(90deg, rgba($color-brown-light, 0.7), rgba($color-brown-dark, 0.7)),
+    background: linear-gradient(90deg, rgba($color-brown-light, 0.7), rgba($color-brown-dark, 0.7))
+    @include respond(tab-port)
+        padding: 4rem
