--- a/sass/components/_tour-card.sass
+++ b/sass/components/_tour-card.sass
@@ -3,8 +3,10 @@
     perspective: 150rem
     -moz-perspective: 150rem
     position: relative
-    @include respond(tab-port)
-        height: 60rem
+    @media only screen and (max-width: 900px), (hover:none)
+        height: auto
+    
+
     &__side
         height: 50rem
         transition: .7s all ease-out
@@ -17,16 +19,26 @@
         box-shadow: $box-shadow
         border-radius: .5rem
         overflow: hidden
-        @include respond(tab-port)
-            height: 60rem
+        @media only screen and (max-width: 900px), (hover:none)
+            height: auto
+            position: relative
         &_front
-            
+            @media only screen and (max-width: 900px), (hover:none)
+                padding-bottom: 10rem
         &_back
             transform: rotateY(180deg)
-            background: linear-gradient(120deg, rgba($color-brown-light, 0.7) 0.03%, rgba($color-brown-dark, 0.7) 99.94%)
+            background: linear-gradient(120deg, rgba($color-brown-light, 1), rgba($color-brown-dark, 1))
+            @media only screen and (max-width: 900px), (hover:none)
+                transform: rotateY(0deg)
+                padding: 5rem
+                padding-top: 12rem
+                margin-top: -10rem
+                clip-path: polygon(0 0, 100% 20%, 100% 100%, 0 100%)
 
     &:hover &__side_front
         transform: rotateY(-180deg)
+        @media only screen and (max-width: 900px), (hover:none)
+            transform: rotateY(0deg)
     &:hover &__side_back
         transform: rotateY(0deg)
 
@@ -91,12 +103,20 @@
         top: 50%
         left: 50%
         transform: translate(-50%, -50%)
+        @media only screen and (max-width: 900px), (hover:none)
+            position: relative
+            top: 0
+            left: 0
+            transform: translate(0, 0)
+            text-align: center
     &__text
         margin-bottom: 8rem
          letter-spacing: .2rem
         text-transform: uppercase
         text-align: center
         color: $color-white
+        @include respond(tab-port)
+            margin-bottom: 5rem
         &_1
             font-size: $font-size-paragraph
             font-weight: 300
