--- a/sass/layout/_header.sass
+++ b/sass/layout/_header.sass
@@ -1,9 +1,17 @@
 .header
     position: relative
     height: 95vh
-    background: linear-gradient(90deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(1, 1, 1, 0.7) 99.94%), 
+    background: linear-gradient(90deg, rgba($color-brown-light, 0.7), rgba($color-black, 0.7)), 
     url(../img/header-background.jpg) center / cover no-repeat
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%)
+    @media (min-resolution: 192dpi) and (min-width: 670px), (min-width: 1340px)
+        background: linear-gradient(90deg, rgba($color-brown-light, 0.7), rgba($color-black, 0.7)), 
+        url(../img/header-background-big.jpg) center / cover no-repeat
+    
+    @include respond(tab-port)
+        height: 65vh
+    @include respond(phone)
+        height: 50vh
     &__logo
         position: absolute
         left: 5rem
