--- a/sass/layout/_navigation.sass
+++ b/sass/layout/_navigation.sass
@@ -13,6 +13,7 @@
         text-align: center
         cursor: pointer
         box-shadow: $box-shadow
+
     &__background
         width: 5rem
         height: 5rem
@@ -38,6 +39,7 @@
         left: 50%
         transform: translate(-50%, -50%)
         list-style: none
+        width: 100%
     &__item
         text-align: center
         &:not(:last-child)
@@ -52,6 +54,7 @@
             background: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%)
             padding-inline: 1rem 2rem
             background-size: 220%
+            padding: 1rem 2rem
             transition: all .4s
             display: inline-block
 
@@ -85,6 +88,7 @@
             top: -.8rem
         &::after
             top: .8rem
+
     &__button:hover &__icon::before
         top: -1rem
     &__button:hover &__icon::after
